--- a/frameworks/blog/docker-compose.yml
+++ b/frameworks/blog/docker-compose.yml
@@ -19,12 +19,12 @@ services:
       volumes:
           - ./:/app
       environment:
-      - "DB_CONNECTION=${DB_CONNECTION}"
-      - "DB_HOST=${DB_HOST}"
-      - "DB_PORT=${DB_PORT}"
-      - "DB_DATABASE=${DB_DATABASE}"
-      - "DB_USERNAME=${DB_USERNAME}"
-      - "DB_PASSWORD=${DB_PASSWORD}"
+      - "DB_CONNECTION=mysql"
+      - "DB_HOST=mysql"
+      - "DB_PORT=3306"
+      - "DB_DATABASE=home_work"
+      - "DB_USERNAME=root"
+      - "DB_PASSWORD=root"
       depends_on:
           - mysql
 
