--- a/frameworks/blog/docker-compose.yml
+++ b/frameworks/blog/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       build:
           context: ./docker/nginx
       volumes:
-          - ./:/app
+          - /blog:/app
       ports:
           - "8080:80"
       depends_on:
@@ -17,7 +17,7 @@ services:
       build:
           context: ./docker/php
       volumes:
-          - ./:/app
+          - /blog:/app
       environment:
       - "DB_CONNECTION=mysql"
       - "DB_HOST=mysql"
